[package]
name = "ltbridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["caibirdme <492877816@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "common",
    "logql",
    "sqlbuilder",
    "traceql"
]

[workspace.dependencies]
nom ={ version = "7.1.3" }
humantime-serde = { version = "1.1.1" }
itertools = { version = "0.13.0" }
ordered-float = { version = "4.3.0" }
humantime = { version = "2.1.0" }
chrono = { version = "0.4.38", features = ["serde"] }
pretty_assertions = "1.4.1"
opentelemetry-proto = { version = "0.7.0", features = ["full"] }

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["default"] }
axum-valid = "0.20.0"
bytes = "1.7.2"
chrono = { workspace = true }
common = { path = "common" }
config = { version = "0.14.0" }
dashmap = "6.1.0"
databend-driver = { version = "0.21.0" }
dyn-clone = "1.0.17"
hex = { version = "0.4.3" }
http = "1.1.0"
humantime-serde = { version = "1.1.1" }
itertools = { version = "0.13.0" }
lazy_static = "1.5.0"
logql = { path = "logql" }
moka = { version = "0.12.8", features = ["default", "sync"] }
opentelemetry = { version = "0.25.0", features = ["metrics"] }
opentelemetry-prometheus = "0.17.0"
opentelemetry-proto = { workspace = true }
opentelemetry-semantic-conventions = { version = "0.25.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["metrics"] }
ordered-float = { version = "4.3.0" }
prometheus = "0.13.4"
prost = { version = "0.13.3" }
reqwest = { version = "0.12.7", features = ["json", "native-tls-vendored", "gzip"], default-features = false }
reqwest-middleware = "0.3.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
serde_with = { version = "3.9.0", features = ["json"] }
sqlbuilder = { path = "sqlbuilder" }
thiserror = { version = "1.0.64" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16" }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1", features = [
    "trace",
    "timeout",
    "compression-gzip",
    "decompression-gzip",
] }
tower-layer = { version = "0.3.3" }
traceql = { path = "traceql" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = [
    "default",
    "env-filter",
    "json",
] }
url = "2.5.2"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sqlparser = "0.50.0"

[build-dependencies]
anyhow = "1.0.89"
prost-build = { version = "0.13.3", features = ["default", "cleanup-markdown"] }
