[package]
name = "ltbridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["caibirdme <492877816@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "common",
    "logql",
    "sqlbuilder",
    "traceql"
]

[workspace.dependencies]
nom ={ version = "7.1.3" }
humantime-serde = { version = "1.1.1" }
itertools = { version = "0.13.0" }
ordered-float = { version = "4.6.0" }
humantime = { version = "2.1.0" }
chrono = { version = "0.4.39", features = ["serde"] }
pretty_assertions = "1.4.1"
opentelemetry-proto = { version = "0.7.0", features = ["full"] }

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["default"] }
axum-valid = "0.20.0"
bytes = "1.9.0"
chrono = { workspace = true }
common = { path = "common" }
config = { version = "0.15.4" }
dashmap = "6.1.0"
databend-driver = { version = "0.23.2" }
dyn-clone = "1.0.17"
flate2 = "1.0.35"
hex = { version = "0.4.3" }
http = "1.2.0"
humantime-serde = { version = "1.1.1" }
itertools = { version = "0.13.0" }
lazy_static = "1.5.0"
logql = { path = "logql" }
moka = { version = "0.12.8", features = ["default", "sync"] }
opentelemetry = { version = "0.24.0", features = ["metrics"] }
opentelemetry-prometheus = "0.17.0"
opentelemetry-proto = { workspace = true }
opentelemetry-semantic-conventions = { version = "0.27.0" }
opentelemetry_sdk = { version = "0.24.1", features = ["metrics"] }
ordered-float = { version = "4.6.0" }
prometheus = "0.13.4"
prost = { version = "0.13.4" }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored", "gzip"], default-features = false }
reqwest-middleware = "0.4.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
serde_with = { version = "3.11.0", features = ["json"] }
sqlbuilder = { path = "sqlbuilder" }
thiserror = { version = "2.0.9" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17" }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = [
    "trace",
    "timeout",
    "compression-gzip",
    "decompression-gzip",
] }
tower-layer = { version = "0.3.3" }
traceql = { path = "traceql" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "default",
    "env-filter",
    "json",
] }
url = "2.5.4"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
sqlparser = "0.53.0"

[build-dependencies]
anyhow = "1.0.95"
prost-build = { version = "0.13.4", features = ["default", "cleanup-markdown"] }
