[package]
name = "sqlbuilder"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["caibirdme <492877816@qq.com>"]

[dependencies]
chrono ={ workspace = true }
common = { path = "../common" }
itertools = { workspace = true }
logql = { path = "../logql" }
opentelemetry-proto = { workspace = true }
ordered-float = { workspace = true }
traceql = { path = "../traceql" }
