[package]
name = "traceql"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["caibirdme <492877816@qq.com>"]

[dependencies]
nom = { version = "7.1.3" }
ordered-float = { version = "4.2.1" }
humantime = { version = "2.1.0" }


[dev-dependencies]
pretty_assertions = { version = "1.4.0" }